# love

./: .env.dev  .gitignore  README.md  analyze_excel.py  app.py  main.py  process_excel.py  pyproject.toml  read_excel_content.py  result_test.json  target.xlsx  utils.py  ~$result_test.xlsx
data/: result_test.json  tavily_playground.json
src/: process_excel.py  tavily_processor.py  watch_info_extractor.py
test/: tavily_search_tes.py  test_tavily_processor.py  test_watch_info_extractor.py
test/results/: tavily_search_results.json
